Render immediately and save tasks when clicking Enter

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <div>
             <input type="text" placeholder="Ex: Limpar a casa" class="input-tasks">
-            <button onclick="registerButton()">Registrar</button>
+            <button class="btnRegister" onclick="registerButton()">Registrar</button>
         </div>
 
         <ul>
