creating text box when list is empty

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </div>
 
         <div class="box-list">
+            <p class="text-boxEmpty">lista vazia</p>
             <ul>
                 
             </ul>
