--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </ul>
         </div>
 
-        <button onclick="deleteList()">Deletar tudo</button>
+        <button onclick="deleteList()" class="removeAll">Deletar tudo</button>
     </div>
     </main>
 </body>
