adding logic to complete task v2

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <ul>
             </ul>
         </div>
-
+        <input type="" checked>
         <button onclick="deleteList()" class="removeAll">Deletar tudo</button>
     </div>
     </main>
