--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
 </head>
 <body>
     <main>
-    <section id="sidebar">
-
-    </section>
     <div id="tasks">
         <div class="box-text">
             <h1>Digite uma tarefa</h1>
@@ -24,12 +21,15 @@
         </div>
 
         <div class="box-list">
-            <p class="text-boxEmpty">lista vazia</p>
-            <ul>
-            </ul>
+            <div class="text-box">
+                <p class="text-boxEmpty">Sua lista está vazia</p>
+            </div>
+            <div>
+                <ul>
+                </ul>
+            </div>
         </div>
-        <input type="" checked>
-        <button onclick="deleteList()" class="removeAll">Deletar tudo</button>
+        <button onclick="deleteList()" class="btnRemoveAll">Deletar tudo</button>
     </div>
     </main>
 </body>
