--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
     <title>ToDo List </title>
 </head>
@@ -24,11 +26,12 @@
             <div class="text-box">
                 <p class="text-boxEmpty">Sua lista está vazia</p>
             </div>
-            <div>
-                <ul>
-                </ul>
-            </div>
+            <ul>
+            </ul>
         </div>
+
+        <!-- <a href=""><i class="fa-solid fa-trash"></i></a> -->
+
         <button onclick="deleteList()" class="btnRemoveAll">Deletar tudo</button>
     </div>
     </main>
