Adding scroll overflow Y

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <p class="text-boxEmpty">Sua lista está vazia</p>
             </div>
             <ul>
+                <li>Teste <div><a href="#">delete</a></div></li>
             </ul>
         </div>
 
