--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html data-theme="light" lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +12,7 @@
 </head>
 <body>
     <main>
+
     <div id="tasks">
         <div class="box-text">
             <h1>Digite uma tarefa</h1>
